# petshop-project

./: .gitignore  CMakeLists.txt  produtos.csv
data/: db_agenda.csv  db_animais.csv  db_clientes.csv  db_produtos.csv
include/: agendamentos.h  animais.h  clientes.h  produtos.h  relatorios.h
src/: agendamentos.c  animais.c  clientes.c  main.c  produtos.c  relatorios.c
